--- a/app.conf
+++ b/app.conf
@@ -12,7 +12,7 @@
 
 handlers:
   - url : /
-    script: index.php
+    script: index.html
 
   - expire : .jpg modify 10 years
   - expire : .swf modify 10 years
